--- a/src/main/resources/html/mapas/Principal/index.html
+++ b/src/main/resources/html/mapas/Principal/index.html
@@ -5,7 +5,15 @@
 
   	<meta charset="UTF-8">
   	<link rel="stylesheet" href="../Principal/css/principal.css">
-  	
+	  
+	<!-- json shapes -->
+	<script type="text/javascript" src="../Principal/json/geoJsonBacias.json"></script> 
+	<script type="text/javascript" src="../Principal/json/geoJsonUnidadesHidrograficas.json"></script>
+	<script type="text/javascript" src="../Principal/json/JsonSuperficial.json"></script>
+	<script type="text/javascript" src="../Principal/json/geoJsonFraturado.json"></script>
+	<script type="text/javascript" src="../Principal/json/geoJsonFreatico.json"></script>
+	  
+	<!-- js de inicalizacao e metodos principais utilizados para conexao javascript e java -->
   	<script src="../Principal/js/principal.js" ></script>
   	<script src="../Principal/js/metodos.js" ></script>
   	
@@ -14,16 +22,15 @@
 	<script defer src="../Principal/js/latlon-ellipsoidal.js" ></script>
 	<script defer src="../Principal/js/utm.js" ></script>
 	<script defer src="../Principal/js/dms.js" ></script>
-  	
-  	
-  	
+	  
+	
 </head>
 <body>
 
 <div id="map"></div>
 
 <!-- Replace the value of the key parameter with your own API key. -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnDFMB5jZdijtWMqKg29OgvnCPEtxyMkI&libraries=places&callback=initAutocomplete" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnDFMB5jZdijtWMqKg29OgvnCPEtxyMkI&libraries=places&language=pt&callback=initialize" async defer></script>
 
 
 </body>
